<resources>
    <string name="app_name2">CalendarAndroid</string>
    <string name="entry_textView">Enter into your productivity!</string>
    <string name="entry_button">Enter</string>
    <string name="title_activity_first_launch">FirstLaunchActivity</string>
    <!--<string name="title_activity_calendar">Calendar Activity</string>-->
    <string name="title_activity_main">MainActivity</string>
    <string name="label_activity_main">Calendar</string>
    <string name="title_activity_add_event">Add event to calendar</string>
    <string name="title_activity_new_calendar">Calendar Activity</string>
    <string name="action_settings">Settings</string>

    <string name="section_format">Page: %1$d</string>

    <string name="intro_indicator_0">Indicates one of three intro slides. Can be marked or unmarked</string>
    <string name="intro_indicator_1">Indicates one of three intro slides. Can be marked or unmarked</string>
    <string name="intro_indicator_2">Indicates one of three intro slides. Can be marked or unmarked</string>
    <string name="finish">Finish</string>
    <string name="intro_btn_next">Next slide of first-launch guide</string>
    <string name="skip">Skip</string>
    <string name="section_img">Image of first app functionality</string>
    <string name="intro_app_description">Create Events and finally organize your life with mighty tools!</string>
    <string name="maxDate">12/31/2020</string>
    <string name="minDate">01/01/2018</string>

    <string name="app_name">Android Week View</string>
    <string name="menu_today">Today</string>
    <string name="menu_day_view">Day view</string>
    <string name="menu_three_day_view">3 day view</string>
    <string name="menu_week_view">Week view</string>
    <string name="title_activity_basic">Basic Example</string>
    <string name="title_activity_calendar">Activity Calendar</string>
    <string name="title_activity_asynchronous">Asynchronous Events</string>
    <string name="async_error">Could not download events from the internet</string>

    <string name="add_event_description">Description</string>
    <string name="add_event_guests">Invited guests</string>
    <string name="add_event_localization">Localization</string>
    <string name="add_event_name">Event name</string>
    <string name="add_event_lasts_from">Lasts from:</string>
    <string name="add_event_lasts_to">Lasts to:</string>
    <string name="add_event_switch">Whole day</string>

</resources>