<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddEventActivity">

    <item
        android:id="@+id/action_today"
        android:orderInCategory="100"
        android:title="@string/menu_today"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_day_view"
        android:orderInCategory="200"
        android:title="@string/menu_day_view"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_three_day_view"
        android:orderInCategory="300"
        android:title="@string/menu_three_day_view"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_week_view"
        android:orderInCategory="400"
        android:title="@string/menu_week_view"
        app:showAsAction="always" />

</menu>

    <!--app:showAsAction="ifRoom"-->
<!--<group android:checkableBehavior="single">-->
<!--<item android:id="@+id/menu_day_view"-->
    <!--android:title="@string/menu_day_view"-->
    <!--android:orderInCategory="100"-->
    <!--app:showAsAction="ifRoom"/>-->
<!--<item android:id="@+id/menu_three_day_view"-->
    <!--android:title="@string/menu_three_day_view"-->
    <!--android:orderInCategory="100"-->
    <!--app:showAsAction="ifRoom"-->
    <!--android:checked="true"/>-->
<!--<item android:id="@+id/menu_week_view"-->
    <!--android:title="@string/menu_week_view"-->
    <!--android:orderInCategory="100"-->
    <!--app:showAsAction="ifRoom"/>-->
<!--</group>-->