<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/first_launch_main_content"
    android:layout_width="match_parent"
    android:background="@color/violet"
    android:layout_height="match_parent"
    tools:context="com.example.calendarandroid.FirstLaunchActivity">


    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="?attr/actionBarSize" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="?attr/actionBarSize"
        android:alpha="0.12"
        android:background="@android:color/white" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/intro_btn_skip"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:text="@string/skip"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/intro_indicator_0"
                android:contentDescription="@string/intro_indicator_0"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginEnd="@dimen/intro_indicator_width"
                android:layout_marginRight="@dimen/intro_indicator_width"
                android:background="@drawable/intro_unselected_page_indicator" />

            <ImageView
                android:id="@+id/intro_indicator_1"
                android:contentDescription="@string/intro_indicator_1"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginEnd="@dimen/intro_indicator_width"
                android:layout_marginRight="@dimen/intro_indicator_width"
                android:background="@drawable/intro_unselected_page_indicator" />

            <ImageView
                android:id="@+id/intro_indicator_2"
                android:contentDescription="@string/intro_indicator_2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:background="@drawable/intro_unselected_page_indicator" />

        </LinearLayout>


        <Button
            android:id="@+id/intro_btn_finish"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:text="@string/finish"
            android:textColor="@android:color/white"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/intro_btn_next"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:contentDescription="@string/intro_btn_next"
            android:padding="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_chevron_right_24dp" />
            <!--android:tint="@android:color/white" />-->


    </FrameLayout>


</android.support.design.widget.CoordinatorLayout>


    <!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:id="@+id/main_content"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:fitsSystemWindows="true"-->
    <!--tools:context=".FirstLaunchActivity">-->

    <!--<android.support.design.widget.AppBarLayout-->
        <!--android:id="@+id/appbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:paddingTop="@dimen/appbar_padding_top"-->
        <!--android:theme="@style/AppTheme2.AppBarOverlay">-->

        <!--<android.support.v7.widget.Toolbar-->
            <!--android:id="@+id/toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="?attr/actionBarSize"-->
            <!--android:layout_weight="1"-->
            <!--android:background="?attr/colorPrimary"-->
            <!--app:layout_scrollFlags="scroll|enterAlways"-->
            <!--app:popupTheme="@style/AppTheme2.PopupOverlay"-->
            <!--app:title="@string/app_name">-->

        <!--</android.support.v7.widget.Toolbar>-->

    <!--</android.support.design.widget.AppBarLayout>-->

    <!--<android.support.v4.view.ViewPager-->
        <!--android:id="@+id/container"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="end|bottom"-->
        <!--android:layout_margin="@dimen/fab_margin"-->
        <!--app:srcCompat="@android:drawable/ic_dialog_email" />-->

    <!--&lt;!&ndash;<TextView&ndash;&gt;-->
        <!--&lt;!&ndash;android:id="@+id/textView"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:text="@string/entry_textView"&ndash;&gt;-->
        <!--&lt;!&ndash;app:layout_constraintBottom_toBottomOf="parent"&ndash;&gt;-->
        <!--&lt;!&ndash;app:layout_constraintLeft_toLeftOf="parent"&ndash;&gt;-->
        <!--&lt;!&ndash;app:layout_constraintRight_toRightOf="parent"&ndash;&gt;-->
        <!--&lt;!&ndash;app:layout_constraintTop_toTopOf="parent"&ndash;&gt;-->
        <!--&lt;!&ndash;tools:textColor="@android:color/black" />&ndash;&gt;-->

    <!--&lt;!&ndash;<Button&ndash;&gt;-->
        <!--&lt;!&ndash;android:id="@+id/button"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_marginTop="30dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:onClick="onClickFirstTimeButton"&ndash;&gt;-->
        <!--&lt;!&ndash;android:text="@string/entry_button"&ndash;&gt;-->
        <!--&lt;!&ndash;app:layout_constraintLeft_toLeftOf="parent"&ndash;&gt;-->
        <!--&lt;!&ndash;app:layout_constraintRight_toRightOf="parent"&ndash;&gt;-->
        <!--&lt;!&ndash;app:layout_constraintTop_toBottomOf="@+id/textView" />&ndash;&gt;-->

<!--</android.support.design.widget.CoordinatorLayout>-->